fixed app height for responsitivity on small viewports

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -39,8 +39,16 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  height: 100vh; /* fallback for Js load */
-  height: var(--doc-height);
+  width: 100vw;
+  min-height: -webkit-fill-available;
+}
+
+body {
+  min-height: 100vh;
+}
+
+.mobile-screen {
+  min-height: -webkit-fill-available;
 }
 
 a {
